update proper Heading

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -6,7 +6,7 @@
         <a href="{{ url_for('display') }}" class="btn btn-danger mx-3" onclick="return confirm('Are you sure you want to go back?');">
           <i class="fa-solid fa-circle-arrow-left"></i>
         </a>
-        <h2 class="heading px-3">Admin Admin Master</h2>
+        <h2 class="heading px-3">Admin Master</h2>
     </nav>
 
     <div class="container py-5 h-100 ">
