--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -28,15 +28,15 @@
                                     <h5 class="fw-normal mb-3 pb-3">Sign into your account...</h5>
 
                                     <div class="form-outline mb-4">
-                                        <input type="text" name="email"  id="em" class="form-control form-control-lg" value="{{ email }}" placeholder="Email"/>
-                                    <label class="form-label" >Email address</label><br>
+                                        <input type="text" name="email"  id="em" class="form-control form-control-lg login" value="{{ email }}" placeholder="Email"/>
+                                    <label class="form-label login-label" >Email address</label><br>
                                         <span id="emailmsg" class="error"></span>
                                     </div>
 
 
                                     <div class="form-outline mb-4">
-                                        <input type="password" name="password" id="pw" class="form-control form-control-lg" placeholder="Password"/>
-                                        <label class="form-label">Password</label>
+                                        <input type="password" name="password" id="pw" class="form-control form-control-lg login" placeholder="Password"/>
+                                        <label class="form-label login-label">Password</label>
                                     </div>
 
                                     <span id="message" class="error"></span>
@@ -51,7 +51,7 @@
                                     {% endif %}
 
                                     <div class="pt-1 mb-4" >
-                                        <input type="submit" class="btn btn-dark btn-lg btn-block mt-3"   value="Login">
+                                        <input type="submit" class="btn btn-dark btn-lg btn-block mt-3 btnlogin"  value="Login">
                                     </div>
 
                                 </form>
