--- a/templates/admin_master.html
+++ b/templates/admin_master.html
@@ -12,7 +12,7 @@
                     <i class="fa-brands fa-reddit fa-cog fa-2x"></i>
                     <span class="toastusermsg">Hey,{{ session['username'] }}</span>
 
-                   <img src="static/img/close.jpg" class="closeimg" data-bs-dismiss="toast" aria-label="Close">
+                   <img src="static/img/close.jpg" class="closeimage" data-bs-dismiss="toast" aria-label="Close">
                 </div>
                 <div class="toast-body">
                     <span class="toastmsg">{{ message }}</span>
