Apply placeholder of state

--- a/templates/user_edit.html
+++ b/templates/user_edit.html
@@ -16,21 +16,13 @@
 
       <div class="row d-flex justify-content-center align-items-center ">
             <div class="col user-edit-form">
-                <div class="card " style="border-radius: .5rem;">
+                <div class="card" style="border-radius: .5rem;">
 
-                    <div class="card-body p-4">
+                    <div class="card-body p-4 p-lg-5">
                         <h2>Profile Details</h2>
                         <hr class="mt-0 mb-4">
 
                         <form action="{{ url_for('updateuser') }}" onsubmit="return !!(CheckMobileNumber() & underAgeValidate() & emptyFname() & emptyLname() & emptyUname() & emptyEmail() & emptyAddress()  & emptyCity() & emptyState() & isZipCode() & fileValidation() & photoValidation())" enctype="multipart/form-data" method="post">
-
-<!--                             <div class="upload">-->
-<!--                             <img src="static/img/images2.png" class="img-fluid my-5 user-logo" alt="logo">-->
-<!--                             <div class="round">-->
-<!--                                 <input type="file" >-->
-<!--                                 <i class="fa fa-camera fa-2x" style="color: #fff;"></i>-->
-<!--                             </div>-->
-<!--                            </div>-->
 
                             <div class="form-outline mb-4">
                                 <input type="hidden" name="id" class="form-control form-control-lg" value="{{data[0] or '' }}" />
@@ -40,16 +32,16 @@
                             </div>
 
                             <div class="row pt-1">
-                                <div class="col-6 mb-3">
-                                     <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                     <div class="form-outline mb-3">
                                         <input type="text" name="username" id="unm" class="form-control form-control-lg" value="{{data[16] or '' }}" readonly  />
                                         <label class="form-label">Username</label><br>
                                          <span id="unmmsg" class="error"></span>
                                     </div>
 
                                 </div>
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
                                         <input type="text" name="email" id="em" class="form-control form-control-lg" value="{{data[15] or '' }}" readonly/>
                                         <label class="form-label">Email</label><br>
                                          <span id="emailmsg" class="error"></span>
@@ -59,15 +51,15 @@
                             </div>
 
                             <div class="row pt-1">
-                                <div class="col-6 mb-3">
-                                   <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                   <div class="form-outline mb-3">
                                         <input type="text" name="fname" id="fnm" class="form-control form-control-lg" value="{{data[2] or '' }}" placeholder="First name" />
                                         <label class="form-label" >First Name</label><br>
                                         <span id="fnmmsg" class="error"></span>
                                     </div>
                                 </div>
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
                                         <input type="text" name="lname" id="lnm" class="form-control form-control-lg" value="{{data[3] or '' }}" placeholder="Last name" />
                                         <label class="form-label">Last Name</label><br>
                                         <span id="lnmmsg" class="error"></span>
@@ -76,8 +68,8 @@
                             </div>
 
                             <div class="row pt-1">
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
                                         <input type="tel" name="mobile" placeholder="Mobile No." id="mo_no" class="form-control form-control-lg" value="{{data[5] or '' }}" />
                                         <label class="form-label">Mobile Number</label><br>
                                         <span id="msg" class="error"></span>
@@ -85,8 +77,8 @@
 
                                 </div>
 
-                                <div class="col-6 mb-3">
-                                    <div class="form-group mb-5 mt-4">
+                                <div class="col-6 ">
+                                    <div class="form-group mb-3" id="gender">
                                         <label class="form-label mx-2" >Gender</label>
                                         <input name="gender" type="radio" value="male" id="m" class="mx-2" />Male
                                         <input name="gender" type="radio" value="female" id="f" class="mx-2" />Female
@@ -96,15 +88,16 @@
                             </div>
 
                             <div class="row pt-1">
-                                    <div class="col-6 mb-3">
-                                        <div class="form-outline mb-4">
-                                            <input type="date" name="dob" id="db" class="form-control form-control-lg" value="{{data[4] or '' }}" placeholder="Date of Birth" />
-                                            <label class="form-label">Date Of Birth</label><br>
-                                            <span id="bdate" class="error"></span>
-                                        </div>
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
+                                        <input type="text" name="address" id="add" class="form-control form-control-lg" value="{{data[7] or '' }}" placeholder="Address" />
+                                        <label class="form-label">Address</label><br>
+                                        <span id="addmsg" class="error"></span>
                                     </div>
-                                    <div class="col-6 mb-3 ">
-                                        <div class="form-outline mb-4 ">
+                                </div>
+
+                                    <div class="col-6">
+                                        <div class="form-outline mb-3">
                                             <input type="text" name="city" id="ct" class="form-control form-control-lg" value="{{data[8] or '' }}" placeholder="City" />
                                             <label class="form-label">City</label><br>
                                             <span id="ctmsg" class="error"></span>
@@ -113,10 +106,16 @@
                             </div>
 
                             <div class="row pt-1">
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
                                         <select id="st" name="state" class="form-control" value="{{data[9] or '' }}">
-                                            <option value="{{data[9] or '' }}" selected>{{data[9] or '' }}</option>
+                                            <option value="{{data[9] or '' }}" selected>
+                                                {% if data[9] != None %}
+                                                    {{data[9] or '' }}
+                                                {% else %}
+                                                     Select State
+                                                {% endif %}
+                                            </option>
                                             <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
                                             <option value="Andhra Pradesh">Andhra Pradesh</option>
                                             <option value="Arunachal Pradesh">Arunachal Pradesh</option>
@@ -159,8 +158,8 @@
                                         <span id="stmsg" class="error"></span>
                                     </div>
                                 </div>
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4">
+                                <div class="col-6 ">
+                                    <div class="form-outline mb-3">
                                         <input type="text" placeholder="Zipcode" id="zcode1" name="zipcode" class="form-control form-control-lg" value="{{data[10] or '' }}" />
                                         <label class="form-label">Zipcode</label><br>
                                         <span id="zip" class="error"></span>
@@ -169,25 +168,25 @@
                             </div>
 
                             <div class="row  pt-1">
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4 ">
-                                        <input type="text" name="address" id="add" class="form-control form-control-lg" value="{{data[7] or '' }}" placeholder="Address" />
-                                        <label class="form-label">Address</label><br>
-                                        <span id="addmsg" class="error"></span>
+                                 <div class="col-6 ">
+                                        <div class="form-outline mb-3">
+                                            <input type="date" name="dob" id="db" class="form-control form-control-lg" value="{{data[4] or '' }}" placeholder="Date of Birth" />
+                                            <label class="form-label">Date Of Birth</label><br>
+                                            <span id="bdate" class="error"></span>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-6 mb-3">
-                                    <div class="form-outline mb-4 ">
-                                        <input type="file" name="file" id="file" class="form-control form-control" autocomplete="off">
-                                        <span>{{data[13] or '' }}</span>
+                                <div class="col-6">
+                                    <div class="form-outline mb-3">
+                                        <input type="file" name="pdf" id="pdf" class="form-control form-control" autocomplete="off">
+                                        <span>{{data[13] or '' }}</span><br>
                                         <label class="form-label">Upload your Birth-Certificate</label><br>
                                         <span id="filemsg" class="error"></span>
                                     </div>
                                 </div>
                             </div>
 
-                             <div class="form-outline mb-4 ">
-                                 <input type="file" name="pfile" id="pfile" class="form-control form-control" autocomplete="off">
+                             <div class="form-outline mb-3 ">
+                                 <input type="file" name="photo" id="file" class="form-control form-control" autocomplete="off">
                                  <label class="form-label">Profile Photo</label><br>
                                  <span id="photomsg" class="error"></span>
                              </div>
