--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -42,15 +42,12 @@
 
                           {% if data[12] != None %}
                             <div class="upload">
-                                <img src="{{ url_for('static', filename='profile/' + data[12] or '')}}" class="img-fluid my-5 rounded-circle user-logo" alt="database-logo">
-                                <div class="round">
-                                    <input type="file" onclick="display_image()">
-                                    <i class="fa fa-camera fa-2x" style="color: #fff;"></i>
-                                </div>
+                                <a href="{{ url_for('static', filename='profile/' + data[12] or '')}}"><img src="{{ url_for('static', filename='profile/' + data[12] or '')}}" class="img-fluid my-5 rounded-circle " width="200" height="200" alt="database-logo"></a>
+
                             </div>
                           {% else %}
                           <div class="upload">
-                                <img src="static/img/images2.png" class="img-fluid my-5 rounded-circle user-logo" alt="logo">
+                                <img src="static/img/images2.png" class="img-fluid my-5 rounded-circle " width="200" height="200" alt="logo">
 
                           </div>
                           {% endif %}
@@ -98,16 +95,20 @@
                                       <p class="text-muted">{{data[11] or '' }}</p>
                                   </div>
                               </div>
-
                               <div class="row pt-1">
-                                  <div class="col-6 mb-3">
+                                  <div class="col-6 mb-3 ">
                                       <h5>Birth Certificate</h5>
-                                      <p class="text-muted">{{data[13] or '' }}</p>
+                                    {% if data[13] != None %}
+                                       <a href="{{ url_for('static', filename='uploads/' + data[13] or '') }}">{{data[13] or '' }}</a>
+                                    {% else %}
+                                        <p>No files choosen</p>
+                                    {% endif %}
                                   </div>
-
                               </div>
 
-                              <hr class="mt-5 mb-4">
+
+
+                              <hr class="horizontal-line">
                               <div class="pt-1 mb-4">
                                   <a href="{{ url_for('fetch_user_edit') }}" class="btn btn-primary btn-lg btn-block btn-user ">Edit your Profile</a>
                               </div>
