--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,8 @@
 .card{
     border-radius: 1rem;
    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+   margin-right: 3rem;
+    margin-left: 3rem;
 }
 .logo{
  width: 30%;
@@ -57,8 +59,8 @@ h5{
 }
 .btn-submit{
     background-color:#073980;
-    width:60%;
-    margin-left:20%;
+    width:40%;
+    margin-left:30%;
     margin-bottom:-10%;
 }
 
@@ -148,12 +150,56 @@ h5{
     font-size:0.9rem;
     font-weight:700;
 }
+#gender{
+    padding-top: 1.5rem;
+}
+.horizontal-line{
+    margin-bottom: 1.5rem;
+    margin-top: 3rem;
+}
+.profile-img{
+}
+.login{
+}
+.login-label{
+}
+.btnlogin{
+}
+#edit-profile{
+}
+#edit-image{
+}
+#container{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+.update-label{
+    margin-bottom: 3rem;
+}
 .toastmsg{
     color: #073980;
     font-size:1rem;
     font-weight:400;
 }
+.form-mobile{
+    margin-bottom: 0.9rem;
+}
+.form-address{
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+}
+.gender-group{
+}
+.form-gender{
+    margin-bottom: 0.5rem;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+}
 .closeimg{
+    margin-left:68%;
+    width:6%;
+}
+.closeimage{
     margin-left:68%;
     width:6%;
 }
@@ -185,6 +231,7 @@ h5{
     margin-left: 0%;
     width: 100%;
     }
+
 }
 @media only screen
 and (min-device-width : 768px)
@@ -195,10 +242,167 @@ and (max-device-width : 1024px) {
     }
     .update-user{
     color:#fff;
-    margin-left:-30%;
+    margin-left:-60%;
+    }
+    .card{
+        margin-left:0%;
+        margin-right: 0%;
+    }
+    .user-edit-form
+    {
+     margin: 0% 0%;
+    }
+    .form-gender{
+        margin-bottom: 0rem;
+        margin-right: 0rem;
+        margin-left: 0rem;
+    }
+    .rounded-circle{
+        width:70%;
+    }
+   .btn-user {
+    background-image: linear-gradient(#000428, #004e92);
+    margin-left: 0%;
+     width: 50%;
+    margin-top: 3%;
+    }
 }
+@media(max-width:700px){
+    .wel-user {
+    color: #fff;
+    margin-left: -10%;
+    font-size: 1.4rem;
+    }
+    .form-mobile{
+        margin-bottom: 0rem;
+    }
+    .form-address{
+        margin-bottom: 0rem;
+        margin-top: 1.5rem;
+    }
+    .user-edit-form
+    {
+     margin: 0% 0%;
+    }
+    .gender-group{
+        margin-bottom: -9%;
+    }
+    .card{
+        margin-left:0%;
+        margin-right: 0%;
+    }
+
+    .form-control-lg
+    {
+     min-height: 0;
+     padding: 1% 2%;
+     font-size:1rem;
+     border-radius:2;
+   }
+   .form-label
+   {
+    font-size: 0.9rem;
+    font-weight: 500;
+    }
+    #edit-profile{
+        width:60%
+    }
+    #edit-image{
+        width:60%
+        margin: 0% 5%;
+    }
+    .profile-img{
+        margin: -8% 20%;
+    }
+    .update-label{
+        margin-bottom: 1rem;
+    }
+    .form-control[type=file]:not(:disabled):not([readonly]) {
+        cursor: pointer;
+    }
+    .form-control[type=file] {
+        overflow: hidden;
+    }
+    .form-control {
+
+        padding: 0% 4%;
+    }
+    #gender{
+        padding-top:0rem;
+    }
+    .update-user {
+    color: #fff;
+    margin-left: -20%;
+    }
+    .toast-container {
+    margin-bottom: -2%;
+    margin-left: 0%;
+    }
+    .closeimg {
+    margin-left: 68%;
+    width: 8%;
+    }
+    .rounded-circle{
+        width:40%;
+    }
+    h5{
+        letter-spacing: 0px;
+        font-size: 1rem;
+    }
+    .btn-user {
+    background-image: linear-gradient(#000428, #004e92);
+    margin-left: 0%;
+    width: 100%;
+    margin-top: 3%;
+    }
+    .horizontal-line{
+    margin-bottom: 0rem;
+    margin-top: 0rem;
+    }
+    .login{
+        padding: 2% 2%;
+        font-size: 1rem;
+        border-radius: 2;
+    }
+    .login-label{
+        font-size: 1.1rem;
+        font-weight: 500;
+    }
+    .btnlogin
+    {
+       width:80%;
+       margin-left:8%;
+    }
+    .closeimage{
+    margin-left:58%;
+    width:8%;
+    }
+    .img-logo {
+    border-radius: 5rem;
+    margin-left: 3%;
+    width: 0%;
+    float:left;
+
+    }
+    .heading {
+    color: white;
+     margin-left: 2%;
+    }
+    #container{
+        padding-top: 0rem;
+        padding-bottom: 0rem;
+    }
+    .btn-submit {
+    background-color: #073980;
+    width: 60%;
+    padding: 0.1rem 0.1rem;
+    margin-left: 20%;
+    margin-bottom: -10%;
+    font-size:1.2rem;
 }
 
+
+}
 
 /*-------------for Profile photo-----------*/
 .upload .round{
